# chaum-pedersen-client-server-authentication

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.client  Dockerfile.server  README.md  docker-compose.yml
chaum-pedersen/: Cargo.toml
chaum-pedersen/src/: chaum_pedersen.rs  interface.rs  lib.rs
client/: Cargo.toml
client/src/: client.rs  lib.rs  main.rs
docker/: Dockerfile.client  Dockerfile.server
grpc/: zkp_auth.proto
pedersen-chaum/: Cargo.toml
proto/: zkp_auth.proto
server/: Cargo.toml
server/src/: handlers.rs  lib.rs  main.rs  server.rs  state.rs  tests.rs  types.rs
